# paper-implementations

./: README.md  speedrun.sh
OmniDocBench-Evals/: README.md  REPORT.md  pyproject.toml  speedrun.sh
OmniDocBench-Evals/outputs/extracted_text_deepseek_ocr/: 2024.emnlp-main.0.json
OmniDocBench-Evals/outputs/markdown_olmo_ocr_2/images_to_pdf/: PPT_1001115_eng_page_003.md  PPT_1001115_eng_page_005.md  PPT_1001115_eng_page_011.md  PPT_11.2013EvaluatingTraineeteacherproficiency_page_010.md  PPT_11.2013EvaluatingTraineeteacherproficiency_page_029.md  PPT_13 fallacies LALT2012_page_001.md  PPT_1637904769_page_002.md  PPT_1637904769_page_008.md  PPT_1637904769_page_017.md  PPT_8076_MEYER_Chapter_2_-_Language_Change_page_012.md  PPT_8076_MEYER_Chapter_2_-_Language_Change_page_017.md  PPT_8076_MEYER_Chapter_2_-_Language_Change_page_021.md  PPT_B14_Claeys_Consistent Presentation of Images_v2_page_006.md  PPT_B14_Claeys_Consistent Presentation of Images_v2_page_010.md  PPT_B14_Claeys_Consistent Presentation of Images_v2_page_013.md  PPT_B14_Claeys_Consistent Presentation of Images_v2_page_024.md  PPT_BaharMartonosi_page_002.md  PPT_BaharMartonosi_page_008.md  PPT_BaharMartonosi_page_010.md  PPT_CalculusReview_page_002.md  PPT_CalculusReview_page_004.md  PPT_CalculusReview_page_009.md  PPT_CalculusReview_page_014.md  PPT_Catalysis.ppt_page_016.md  PPT_EnglishtoAmericanTransition_page_005.md  PPT_EnglishtoAmericanTransition_page_016.md  PPT_EnglishtoAmericanTransition_page_017.md  PPT_Keuk Chan Narith_page_005.md  PPT_Keuk Chan Narith_page_009.md  PPT_LEP power point presentation-English-FINAL-10-31-07_page_004.md  PPT_LEP power point presentation-English-FINAL-10-31-07_page_006.md  PPT_LEP power point presentation-English-FINAL-10-31-07_page_008.md  PPT_LEP power point presentation-English-FINAL-10-31-07_page_010.md  PPT_LEP power point presentation-English-FINAL-10-31-07_page_011.md  PPT_LEP power point presentation-English-FINAL-10-31-07_page_015.md  PPT_MMAT5390Lecture1_page_023.md  PPT_MMAT5390Lecture1_page_024.md  PPT_PresentationSpecification_page_010.md  PPT_PresentationSpecification_page_025.md  PPT_StewartCalcET7e_03_02_page_010.md  (+964 more)
OmniDocBench-Evals/outputs/markdowns_for_dpsk_ocr/results_dpsk-cleaned/: docstructbench_00039896.1983.10545823.pdf_1.md  docstructbench_dianzishu_zhongwenzaixian-o.O-60368448.pdf_343.md  docstructbench_dianzishu_zhongwenzaixian-o.O-60403612.pdf_179.md  docstructbench_dianzishu_zhongwenzaixian-o.O-60482015.pdf_56.md  docstructbench_dianzishu_zhongwenzaixian-o.O-61323717.pdf_203.md  docstructbench_dianzishu_zhongwenzaixian-o.O-61465568.pdf_186.md  docstructbench_dianzishu_zhongwenzaixian-o.O-61467079.pdf_40.md  docstructbench_dianzishu_zhongwenzaixian-o.O-61510621.pdf_161.md  docstructbench_dianzishu_zhongwenzaixian-o.O-61510863.pdf_73.md  docstructbench_dianzishu_zhongwenzaixian-o.O-61511646.pdf_188.md  docstructbench_dianzishu_zhongwenzaixian-o.O-61513005.pdf_179.md  docstructbench_dianzishu_zhongwenzaixian-o.O-61518266.pdf_149.md  docstructbench_dianzishu_zhongwenzaixian-o.O-61520553.pdf_328.md  docstructbench_dianzishu_zhongwenzaixian-o.O-61520612.pdf_140.md  docstructbench_dianzishu_zhongwenzaixian-o.O-61520788.pdf_391.md  docstructbench_dianzishu_zhongwenzaixian-o.O-61520814.pdf_185.md  docstructbench_dianzishu_zhongwenzaixian-o.O-61521185.pdf_167.md  docstructbench_dianzishu_zhongwenzaixian-o.O-61521384.pdf_750.md  docstructbench_dianzishu_zhongwenzaixian-o.O-61521429.pdf_358.md  (+705 more)
OmniDocBench-Evals/tools/: generate_result_tables_final.ipynb  image_to_pdf-checkpoint.py
agent_r1/: README.md  inference.sh  install.sh  model_merge.sh  pyproject.toml  run_grpo_hotpotqa.sh  run_ppo_hotpotqa.sh  speedrun-nodocker.sh  speedrun.sh  vllm_serve.sh
agent_r1/docs/getting_started/: installation.md
agent_r1/docs/inference/: inference.md
agent_r1/src/agent_r1.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agent_r1/src/agent_r1/tool/: base.py  (+1 more)
agent_r1/src/scripts/: model_merge.sh
attention_is_not_all_you_need/: .gitignore  README.md  blog.md  inference.sh  pyproject.toml  speedrun.sh  technical.md
attention_is_not_all_you_need/config/: configs.py
attention_is_not_all_you_need/scripts/: analyze.py  analyze_best_results.py  eval_snli.py  train.py  update_snli_models.py  upload_to_hf.py  visualize_results.py
attention_is_not_all_you_need/src/attn_is_not_all_you_need/: eval_snli.py  eval_wikitext.py  train.py  train_snli.py
just_rl/: .gitignore  2.md  README.md  implement_code_summary.md  initial_plan.txt  pyproject.toml
just_rl/config/: justrl_deepseek_1.5b.yaml  justrl_nemotron_1.5b.yaml
just_rl/data/: dapo_loader.py  prompt_utils.py
just_rl/evals/: gen_vllm.py  grade.py
just_rl/generate_code/justrl_reproduction/: README.md  requirements.txt
just_rl/justrl_eval_outputs/Qwen2.5-0.5B/: grade.jsonl  gsm8k_t0.7_p0.9_n1-MNT1024.jsonl  gsm8k_t0.7_p0.9_n1-MNT1024_incorrect_data.json
just_rl/justrl_eval_outputs/SmolLM-360M/: aime25_t0.7_p0.9_n32-MNT31744.jsonl  grading_results.json
just_rl/scripts/: prepare_data.py  prepare_data.sh  train.py  train.sh  train_grpo.py
just_rl/src/: __init__.py  eval_utils.py  grpo_trainer.py
just_rl/verl/trainer/: main_ppo.py
just_rl/verl/workers/: fsdp_workers.py
spurious_rewards/: .gitignore  EVALUATION_RESULTS.md  README.md  inference.sh  pyproject.toml  speedrun.sh  speedrun.sh.backup  upload_data.py  upload_results.py
spurious_rewards/src/spurious_rewards.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tiny_recursive_models/: .gitignore  README.md  pyproject.toml  speedrun-inference.sh  speedrun.sh
tiny_recursive_models/config/arch/: hrm.yaml  transformers_baseline.yaml  trm.yaml  trm_hier6.yaml  trm_mlp.yaml  trm_singlez.yaml
tiny_recursive_models/docs/assets/: npyjs.js
tiny_recursive_models/docs/hf_model_cards/: model_card_arc_agi_1.md  model_card_maze.md  model_card_sudoku.md
tiny_recursive_models/scripts/: cmd.sh  run_eval_only.py  train.py
tiny_recursive_models/src/tiny_recursive_models/: __init__.py
tiny_recursive_models/src/trm/: __init__.py
(+1906 files in other folders)
