[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omnidocbench-evals"
version = "0.1.0"
description = "Evaluation scripts for OmniDocBench OCR models"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "alphaXiv"}
]

dependencies = [
    "PyMuPDF",
    "tqdm",
    "jupyter",
    "pandas",
    "matplotlib",
    "datasets",
]

[project.optional-dependencies]
deepseek-ocr = [
    "torch==2.6.0",
    "torchvision==0.21.0",
    "torchaudio==2.6.0",
    "vllm @ https://github.com/vllm-project/vllm/releases/download/v0.8.5/vllm-0.8.5+cu118-cp38-abi3-manylinux1_x86_64.whl",
    "transformers",
    "tokenizers",
    "img2pdf",
    "einops",
    "easydict",
    "addict", 
    "Pillow",
    "numpy",

]
olmocr = [
    "cached-path",
    "smart_open",
    "pypdf>=5.2.0",
    "pypdfium2",
    "cryptography",
    "lingua-language-detector",
    "Pillow",
    "ftfy",
    "bleach",
    "markdown2",
    "markdownify",
    "filelock",
    "orjson",
    "requests",
    "zstandard",
    "boto3",
    "httpx",
    "torch>=2.7.0",
    "transformers==4.55.2",
    "beaker-py"
]
chandra-ocr = [
    "chandra-ocr",
]
