[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-r1"
version = "0.1.0"
description = "Recursive reasoning with tiny neural networks for solving ARC-AGI and other puzzles"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "alphaXiv"}
]

dependencies = [
    "FlagEmbedding",
    "faiss-cpu",
]