[project]
name = "just_rl"
version = "0.1.0"
description = "JustRL Reproduction: Scaling a 1.5B LLM with a Simple RL Recipe"
requires-python = "==3.10.*"
dependencies = [
    "verl",
    "vllm",
    "torch==2.5.*",
    "transformers",
    "accelerate",
    "flash-attn",
    "hydra-core",
    "numpy",
    "datasets>=4.0.0",  # Requires >=4.0.0 for compatibility with pyarrow>=15.0.0
    "wandb",
]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.extra-build-dependencies]
flash-attn = ["torch==2.5.*"]

