[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tiny-recursive-models"
version = "0.1.0"
description = "Recursive reasoning with tiny neural networks for solving ARC-AGI and other puzzles"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "alphaXiv"}
]

dependencies = [
    "torch>=2.0.0",
    "einops",
    "tqdm",
    "coolname",
    "pydantic>=2.0.0",
    "argdantic",
    "wandb",
    "omegaconf",
    "hydra-core",
    "huggingface_hub",
    "packaging",
    "numba",
    "ninja",
    "setuptools",
]
